--- a/Emzi0767.AndroidBot/packages.config
+++ b/Emzi0767.AndroidBot/packages.config
@@ -1,13 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="DSharpPlus" version="2.1.9-rc-00009" targetFramework="monoandroid71" />
-  <package id="DSharpPlus.CommandsNext" version="2.1.9-rc-00009" targetFramework="monoandroid71" />
-  <package id="DSharpPlus.Interactivity" version="2.1.9-rc-00009" targetFramework="monoandroid71" />
-  <package id="Microsoft.CSharp" version="4.3.0" targetFramework="monoandroid71" />
-  <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="monoandroid71" />
+  <package id="DSharpPlus" version="3.2.3" targetFramework="monoandroid60" />
+  <package id="DSharpPlus.CommandsNext" version="3.2.3" targetFramework="monoandroid60" />
+  <package id="DSharpPlus.Interactivity" version="3.2.3" targetFramework="monoandroid60" />
+  <package id="Microsoft.CSharp" version="4.4.0" targetFramework="monoandroid60" />
+  <package id="Microsoft.NETCore.Platforms" version="2.0.1" targetFramework="monoandroid60" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="monoandroid71" />
-  <package id="NETStandard.Library" version="1.6.1" targetFramework="monoandroid71" />
-  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="monoandroid71" />
+  <package id="NETStandard.Library" version="2.0.1" targetFramework="monoandroid60" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="monoandroid60" />
   <package id="System.AppContext" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Collections" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="monoandroid71" />
@@ -25,11 +25,11 @@
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Linq" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="monoandroid71" />
-  <package id="System.Net.Http" version="4.3.2" targetFramework="monoandroid71" />
+  <package id="System.Net.Http" version="4.3.3" targetFramework="monoandroid60" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Net.WebSockets" version="4.3.0" targetFramework="monoandroid71" />
-  <package id="System.Net.WebSockets.Client" version="4.3.0" targetFramework="monoandroid71" />
+  <package id="System.Net.WebSockets.Client" version="4.3.1" targetFramework="monoandroid60" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Reflection" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="monoandroid71" />
