--- a/Emzi0767.AndroidBot/packages.config
+++ b/Emzi0767.AndroidBot/packages.config
@@ -1,16 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="DSharpPlus" version="2.1.9-rc-00009" targetFramework="monoandroid71" />
-  <package id="DSharpPlus.CommandsNext" version="2.1.9-rc-00009" targetFramework="monoandroid71" />
-  <package id="DSharpPlus.Interactivity" version="2.1.9-rc-00009" targetFramework="monoandroid71" />
+  <package id="DSharpPlus" version="4.0.0-beta-00375" targetFramework="monoandroid71" />
+  <package id="DSharpPlus.CommandsNext" version="4.0.0-beta-00375" targetFramework="monoandroid71" />
+  <package id="DSharpPlus.Interactivity" version="4.0.0-beta-00375" targetFramework="monoandroid71" />
+  <package id="DSharpPlus.WebSocket.WebSocket4NetCore" version="4.0.0-beta-00375" targetFramework="monoandroid71" />
   <package id="Microsoft.CSharp" version="4.3.0" targetFramework="monoandroid71" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="2.0.0" targetFramework="monoandroid71" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.0.0" targetFramework="monoandroid71" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="monoandroid71" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="monoandroid71" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="monoandroid71" />
-  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="monoandroid71" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="monoandroid71" />
+  <package id="SuperSocket.ClientEngine.Core" version="0.8.0.13" targetFramework="monoandroid71" />
   <package id="System.AppContext" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Collections" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="monoandroid71" />
+  <package id="System.Collections.Specialized" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.ComponentModel.TypeConverter" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Console" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="monoandroid71" />
@@ -25,11 +30,13 @@
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Linq" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="monoandroid71" />
-  <package id="System.Net.Http" version="4.3.2" targetFramework="monoandroid71" />
+  <package id="System.Net.Http" version="4.3.3" targetFramework="monoandroid71" />
+  <package id="System.Net.NameResolution" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="monoandroid71" />
+  <package id="System.Net.Security" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Net.WebSockets" version="4.3.0" targetFramework="monoandroid71" />
-  <package id="System.Net.WebSockets.Client" version="4.3.0" targetFramework="monoandroid71" />
+  <package id="System.Net.WebSockets.Client" version="4.3.1" targetFramework="monoandroid71" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Reflection" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="monoandroid71" />
@@ -56,5 +63,5 @@
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="monoandroid71" />
-  <package id="WebSocket4Net" version="0.14.1" targetFramework="monoandroid71" />
+  <package id="WebSocket4Net" version="0.15.0" targetFramework="monoandroid71" />
 </packages>
