--- a/Emzi0767.AndroidBot/Properties/AndroidManifest.xml
+++ b/Emzi0767.AndroidBot/Properties/AndroidManifest.xml
@@ -6,5 +6,5 @@
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-	<application android:label="Companion Cube Portable" android:icon="@drawable/Icon"></application>
+	<application android:label="DSharpPlus Example Xamarin Bot" android:icon="@drawable/Icon"></application>
 </manifest>
