--- a/Emzi0767.AndroidBot/Properties/AndroidManifest.xml
+++ b/Emzi0767.AndroidBot/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="Emzi0767.AndroidBot" android:versionCode="3" android:versionName="2.0" android:installLocation="auto">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="Emzi0767.AndroidBot" android:versionName="2.0.1" android:installLocation="auto" android:versionCode="4">
 	<uses-sdk android:minSdkVersion="24" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
